--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,26 +6,57 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  
+  <!-- Primary Meta Tags -->
+  <title>SynText AI - Intelligent Text Analysis & Learning Tool</title>
+  <meta name="title" content="SynText AI - Intelligent Text Analysis & Learning Tool">
+  <meta name="description" content="Transform how you learn with SynText AI. Our platform analyzes documents, creates flashcards, generates quizzes, and extracts key concepts to enhance your learning experience." />
+  <meta name="keywords" content="AI learning, document analysis, flashcards, quizzes, study tool, education technology, key concepts, learning assistant" />
+  <meta name="author" content="SynText AI Team" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://syntextai.com/" />
+  <meta property="og:title" content="SynText AI - Intelligent Text Analysis & Learning Tool" />
+  <meta property="og:description" content="Transform how you learn with SynText AI. Our platform analyzes documents, creates flashcards, generates quizzes, and extracts key concepts to enhance your learning experience." />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://syntextai.com/" />
+  <meta property="twitter:title" content="SynText AI - Intelligent Text Analysis & Learning Tool" />
+  <meta property="twitter:description" content="Transform how you learn with SynText AI. Our platform analyzes documents, creates flashcards, generates quizzes, and extracts key concepts to enhance your learning experience." />
+  <meta property="twitter:image" content="%PUBLIC_URL%/og-image.png" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://syntextai.com/" />
+  
+  <!-- Preconnect to critical domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+  <link rel="preconnect" href="https://js.stripe.com" crossorigin />
+  
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <!-- Paste the script snippet in the head of your app's index.html -->
-  <script async src="https://js.stripe.com/v3/buy-button.js">
+  
+  <!-- Structured Data - JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "SynText AI",
+      "description": "Transform how you learn with SynText AI. Our platform analyzes documents, creates flashcards, generates quizzes, and extracts key concepts to enhance your learning experience.",
+      "url": "https://syntextai.com",
+      "applicationCategory": "EducationalApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
   </script>
-  <title>SynText AI</title>
+  
+  <!-- Stripe Payment Integration -->
+  <script async src="https://js.stripe.com/v3/buy-button.js"></script>
 </head>
 
 <body>
